Fix videos on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -308,10 +308,10 @@ header video {
 video {
     height: 140px;
     width: 100%;
-    flex-basis: 100%;
     border-radius: 12px;
     object-fit: cover;
     object-position: center;
+    overflow: hidden;
 }
 
 iframe {
